# ble-peripheral

./: Cargo.toml  README.md
examples/: bluer_echo_server.rs
src/: advertisement.rs  att_error.rs  bluetooth_address.rs  bluetooth_error.rs  gap_advertiser.rs  gatt_connection.rs  gatt_server_cb.rs  lib.rs  mtu.rs  peripheral.rs
src/descriptors/: attribute_handle.rs  gatt_characteristic.rs  gatt_descriptor.rs  gatt_service.rs  mod.rs  uuid.rs
