[package]
name = "ble-peripheral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
enumset = "1.1.2"

# TODO: Move this to separate crate!
[dev-dependencies]
bluer = { version = "0.16.1", features = ["bluetoothd"] }
tokio = { version = "1.32.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
futures-util = "0.3.28"